.server.log

> scm-ai-server@0.2.0 start
> node src/index.js

file:///workspaces/BridgeLineUSA/backend/src/routes/quotesRoute.js:321
    const customerCandidates = [row.customer_name, slug(row.customer_name), (row.customer_name || '').trim()];
          ^^^^^^^^^^^^^^^^^^

SyntaxError: Unexpected identifier 'customerCandidates'
    at compileSourceTextModule (node:internal/modules/esm/utils:344:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:105:18)
    at #translate (node:internal/modules/esm/loader:534:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:581:27)

Node.js v22.17.0
